--- a/src/xhr.html
+++ b/src/xhr.html
@@ -38,7 +38,7 @@
             
             var remote;
             window.onload = function(){
-                remote = new easyXDM.Interface({}, {
+                remote = new easyXDM.Rpc({}, {
                     local: {
                         post: {
                             isAsync: true,
