--- a/src/example/resize_iframe.html
+++ b/src/example/resize_iframe.html
@@ -12,7 +12,7 @@
                 /**
                  * When the window is finished loading start setting up the transport
                  */
-                transport = new easyXDM.transport.BestAvailableTransport(/** The configuration */{
+                transport = new easyXDM.Transport(/** The configuration */{
                     /**
                      * Register the url to hash.html, this must be an absolute path
                      * or a path relative to the root.
