--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -12,7 +12,7 @@
                 /**
                  * When the window is finished loading start setting up the transport
                  */
-                transport = new easyXDM.transport.BestAvailableTransport(/** The configuration */{
+                transport = new easyXDM.Transport(/** The configuration */{
                     /**
                      * Register the url to hash.html, this must be an absolute path
                      * or a path relative to the root.
@@ -23,14 +23,15 @@
                      * Register the url to the remote interface
                      * @field
                      */
-                    remote: remoteUrl + "/remotetransport.html"
-                },/**The onReady handler*/ function(){
-                    /**
-                     * Send a message to the other side
-                     */
-                    transport.postMessage("This is a message sent from " + location);
+                    remote: remoteUrl + "/remotetransport.html",
+                    onReady: function(){
+                        /**
+                         * Send a message to the other side
+                         */
+                        transport.postMessage("This is a message sent from " + location);
+                    }
                 });
-            }
+            };
         </script>
     </head>
     <body>
