Changed the name of easyXDM.Transport to easyXDM.Socket

--- a/src/example/data.html
+++ b/src/example/data.html
@@ -47,7 +47,7 @@
                 /**
                  * When the window is finished loading start setting up the channel
                  */
-                channel = new easyXDM.Transport(/** The configuration */{
+                channel = new easyXDM.Socket(/** The configuration */{
                     /**
                      * Register the url to hash.html, this must be an absolute path
                      * or a path relative to the root.
