--- a/src/example/remote.html
+++ b/src/example/remote.html
@@ -34,7 +34,7 @@
                     /**
                      * We start by creating a channel
                      */
-                    proxy = new easyXDM.Transport(/** The configuration */{
+                    proxy = new easyXDM.Socket(/** The configuration */{
                         /**
                          * Register the method that should handle incoming data
                          * @param {Object} data
