--- a/src/example/remotetransport.html
+++ b/src/example/remotetransport.html
@@ -13,7 +13,7 @@
                 /**
                  * We start by creating a transport
                  */
-                transport = new easyXDM.Transport(/** The configuration */{
+                transport = new easyXDM.Socket(/** The configuration */{
                     /**
                      * Register the method that should handle incoming messages
                      * @param {String} data
