--- a/src/example/index.html
+++ b/src/example/index.html
@@ -25,7 +25,7 @@
                 /**
                  * When the window is finished loading start setting up the channel
                  */
-                proxy = new easyXDM.Transport(/** The configuration */{
+                proxy = new easyXDM.Socket(/** The configuration */{
                     /**
                      * Register the method that should handle incoming data
                      * @param {Object} data
