--- a/src/example/remotedata.html
+++ b/src/example/remotedata.html
@@ -49,7 +49,7 @@
                 /**
                  * We start by creating a channel
                  */
-                channel = new easyXDM.Transport(/** The configuration */{
+                channel = new easyXDM.Socket(/** The configuration */{
                     /**
                      * Register the method that should handle incoming data
                      * @param {Object} data
