Started removing support for using the HashTransport with the active hash.html file

--- a/src/tests/test_rpc.html
+++ b/src/tests/test_rpc.html
@@ -37,7 +37,7 @@
             var remote;
             window.onload = function(){
                 remote = new easyXDM.Rpc({
-                    local: "../hash.html"
+                    local: "../name.html"
                 }, {
                     remote: {
                         voidCallback: {
