Some changes to the examples

--- a/src/example/data.html
+++ b/src/example/data.html
@@ -59,6 +59,7 @@
                      * @field
                      */
                     remote: remoteUrl + "/remotedata.html",
+                    remoteHelper: remoteUrl + "/../name.html",
                     onReady: function(){
                         /**
                          * Send some data to the other side
