--- a/src/example/remote.html
+++ b/src/example/remote.html
@@ -35,6 +35,7 @@
                      * We start by creating a channel
                      */
                     proxy = new easyXDM.Socket(/** The configuration */{
+                        local: "../name.html",
                         /**
                          * Register the method that should handle incoming data
                          * @param {Object} data
