--- a/src/example/remotedata.html
+++ b/src/example/remotedata.html
@@ -50,6 +50,7 @@
                  * We start by creating a channel
                  */
                 channel = new easyXDM.Socket(/** The configuration */{
+                    local: "../name.html",
                     /**
                      * Register the method that should handle incoming data
                      * @param {Object} data
