--- a/src/example/remotemethods.html
+++ b/src/example/remotemethods.html
@@ -20,7 +20,9 @@
                 /**
                  * When the channel is ready we create the interface
                  */
-                remote = new easyXDM.Rpc(/** The channel configuration*/{}, /** The configuration */ {
+                remote = new easyXDM.Rpc(/** The channel configuration*/{
+                    local: "../name.html"
+                }, /** The configuration */ {
                     remote: {
                         alertMessage: {
                             isVoid: true
