--- a/src/example/remotetransport.html
+++ b/src/example/remotetransport.html
@@ -14,6 +14,7 @@
                  * We start by creating a transport
                  */
                 transport = new easyXDM.Socket(/** The configuration */{
+                    local: "../name.html",
                     /**
                      * Register the method that should handle incoming messages
                      * @param {String} data
