--- a/src/xhr.html
+++ b/src/xhr.html
@@ -40,7 +40,7 @@
             
             window.onload = function(){
                 var remote = new easyXDM.Rpc({
-                    local: "hash.html"
+                    local: "name.html"
                 }, {
                     local: {
                         post: {
