--- a/src/example/transport.html
+++ b/src/example/transport.html
@@ -7,7 +7,9 @@
         <script type="text/javascript">
             var transport;
             var remoteUrl = location.protocol + "//" + location.host.replace("consumer", "provider") + location.pathname.substring(0, location.pathname.lastIndexOf("/"));
-            
+            if (remoteUrl.indexOf("xdm1") !== -1) {
+                remoteUrl = remoteUrl.replace("xdm1", "xdm2");
+            }
             window.onload = function(){
                 /**
                  * When the window is finished loading start setting up the transport
@@ -18,12 +20,13 @@
                      * or a path relative to the root.
                      * @field
                      */
-                    local: "../hash.html",
+                    local: "../name.html",
                     /**
                      * Register the url to the remote interface
                      * @field
                      */
                     remote: remoteUrl + "/remotetransport.html",
+                    remoteHelper: remoteUrl + "/../name.html",
                     onReady: function(){
                         /**
                          * Send a message to the other side
