--- a/src/example/widgets.html
+++ b/src/example/widgets.html
@@ -13,8 +13,8 @@
             var _widgetManager;
             window.onload = function(){
                 _widgetManager = new easyXDM.WidgetManager({
-                    local: "../hash.html",
-                    container: document.getElementById("widgets")
+                    local: "../name.html",
+					container: document.getElementById("widgets")
                 });
                 document.getElementById("widget1url").value = location.href.replace("consumer", "provider").replace("widgets.html", "widget.html");
                 document.getElementById("widget2url").value = location.href.replace("consumer.", "").replace("widgets.html", "widget.html");
