--- a/src/example/data.html
+++ b/src/example/data.html
@@ -42,7 +42,21 @@
             };
             
             var channel;
-            var remoteUrl = location.protocol + "//" + location.host.replace("consumer", "provider") + location.pathname.substring(0, location.pathname.lastIndexOf("/"));
+            var REMOTE = (function(){
+                var remote = location.href;
+                switch (location.host) {
+                    case "provider.easyxdm.net":
+                        location.href = remote.replace("provider", "consumer");
+                        break;
+                    case "easyxdm.net":
+                        remote = remote.replace("easyxdm.net", "consumer.easyxdm.net");
+                        break;
+                    case "xdm1":
+                        remote = remote.replace("xdm1", "xdm2");
+                        break;
+                }
+                return remote.substring(0, remote.lastIndexOf("/") + 1);
+            }());
             window.onload = function(){
                 /**
                  * When the window is finished loading start setting up the channel
@@ -58,8 +72,8 @@
                      * Register the url to the remote interface
                      * @field
                      */
-                    remote: remoteUrl + "/remotedata.html",
-                    remoteHelper: remoteUrl + "/../name.html",
+                    remote: REMOTE + "/remotedata.html",
+                    remoteHelper: REMOTE + "/../name.html",
                     onReady: function(){
                         /**
                          * Send some data to the other side
