--- a/src/example/index.html
+++ b/src/example/index.html
@@ -19,10 +19,21 @@
              * remote web application and can serve as a bridge between the two applications.
              */
             var proxy;
-            var remoteUrl = location.protocol + "//" + location.host.replace("consumer", "provider") + location.pathname.substring(0, location.pathname.lastIndexOf("/"));
-            if (remoteUrl.indexOf("xdm1") !== -1) {
-                remoteUrl = remoteUrl.replace("xdm1", "xdm2");
-            }
+            var REMOTE = (function(){
+                var remote = location.href;
+                switch (location.host) {
+                    case "provider.easyxdm.net":
+                        location.href = remote.replace("provider", "consumer");
+                        break;
+                    case "easyxdm.net":
+                        remote = remote.replace("easyxdm.net", "consumer.easyxdm.net");
+                        break;
+                    case "xdm1":
+                        remote = remote.replace("xdm1", "xdm2");
+                        break;
+                }
+                return remote.substring(0, remote.lastIndexOf("/") + 1);
+            }());
             window.onload = function(){
                 /**
                  * When the window is finished loading start setting up the channel
@@ -54,8 +65,8 @@
                      * Register the url to the remote interface
                      * @field
                      */
-                    remote: remoteUrl + "/remote.html",
-                    remoteHelper: remoteUrl + "/../name.html"
+                    remote: REMOTE + "/remote.html",
+                    remoteHelper: REMOTE + "/../name.html"
                 });
             };
         </script>
