--- a/src/example/methods.html
+++ b/src/example/methods.html
@@ -12,10 +12,21 @@
         </script>
         <script type="text/javascript">
             var remote;
-            var remoteUrl = location.protocol + "//" + location.host.replace("consumer", "provider") + location.pathname.substring(0, location.pathname.lastIndexOf("/"));
-            if (remoteUrl.indexOf("xdm1") !== -1) {
-                remoteUrl = remoteUrl.replace("xdm1", "xdm2");
-            }
+            var REMOTE = (function(){
+                var remote = location.href;
+                switch (location.host) {
+                    case "provider.easyxdm.net":
+                        location.href = remote.replace("provider", "consumer");
+                        break;
+                    case "easyxdm.net":
+                        remote = remote.replace("easyxdm.net", "consumer.easyxdm.net");
+                        break;
+                    case "xdm1":
+                        remote = remote.replace("xdm1", "xdm2");
+                        break;
+                }
+                return remote.substring(0, remote.lastIndexOf("/") + 1);
+            }());
             window.onload = function(){
                 /**
                  * When the window is finished loading start setting up the interface
@@ -31,8 +42,8 @@
                      * Register the url to the remote interface
                      * @field
                      */
-                    remote: remoteUrl + "/remotemethods.html",
-                    remoteHelper: remoteUrl + "/../name.html",
+                    remote: REMOTE + "/remotemethods.html",
+                    remoteHelper: REMOTE + "/../name.html",
                     /**
                      * Register the DOMElement that the generated IFrame should be inserted into
                      */
