--- a/src/example/xhr.html
+++ b/src/example/xhr.html
@@ -21,6 +21,9 @@
                     case "easyxdm.net":
                         remote = remote.replace("easyxdm.net", "consumer.easyxdm.net");
                         break;
+                    case "consumer.easyxdm.net":
+                        remote = remote.replace("consumer", "provider");
+                        break;
                     case "xdm1":
                         remote = remote.replace("xdm1", "xdm2");
                         break;
