Completed the bookmark sample

--- a/src/example/bookmark.html
+++ b/src/example/bookmark.html
@@ -23,14 +23,6 @@
                 }
             }
         </script>
-        <script type="text/javascript">
-        	// this is the bookmark code
-            (function(){
-                var script = document.createElement("script");
-                script.type = "text/javascript";
-                script.src = "bookmark.js";
-                document.getElementsByTagName('head')[0].appendChild(script);
-            })();
-        </script>
+        <a href='javascript:(function(){var script = document.createElement("script");script.type = "text/javascript";script.src = "bookmark.js";document.getElementsByTagName("head")[0].appendChild(script);})();'>bookmark</a>
     </body>
 </html>
