--- a/src/example/bookmark.html
+++ b/src/example/bookmark.html
@@ -25,8 +25,26 @@
         </script>
         <a id="bookmark" src="">Bookmark</a>
         <script type="text/javascript">
-            var baseUrl = location.href.substring(0, location.href.lastIndexOf("/") + 1);
-            document.getElementById("bookmark").href = 'javascript:(function(){var script = document.createElement("script");script.type = "text/javascript";script.src = "' + baseUrl + 'bookmark.js";document.getElementsByTagName("head")[0].appendChild(script);})();';
+            var baseUrl = location.href.substring(0, location.href.lastIndexOf("/"));
+            
+            // to simplify development, we create the bookmarklet as a regular function
+            function bookmark(){
+                if (typeof myBookmark === "undefined") {
+                    var script = document.createElement("script");
+                    script.type = "text/javascript";
+                    script.src = baseUrl + "/bookmark.js";
+                    document.getElementsByTagName("head")[0].appendChild(script);
+                }
+                else {
+                    myBookmark.run();
+                }
+            }
+            
+            // and then we include it using .toString().
+            document.getElementById("bookmark").href = 'javascript:(' +
+            (bookmark.toString().replace('function bookmark', 'function').replace('baseUrl + "', '"' + baseUrl)).replace(/\s+/g, " ") +
+            ')();';
+            // when finished, you just copy the url from the rendered page
         </script>
     </body>
 </html>
