added the missing return statement

--- a/src/xhr.html
+++ b/src/xhr.html
@@ -18,7 +18,7 @@
                             item = list[i];
                             var obj = new ActiveXObject(item);
                             return function(){
-                                new ActiveXObject(item);
+                                return new ActiveXObject(item);
                             };
                         } 
                         catch (e) {
