Aligned easyXDM.Rpc with the JSON-RPC protocol. It is now also possible to specify an error handler that will handle the JSON-RPC error message.

--- a/src/tests/test_rpc.html
+++ b/src/tests/test_rpc.html
@@ -66,6 +66,12 @@
                                 // Echo back the msg
                                 return msg;
                             }
+                        },
+                        error: {
+                            method: function(){
+                                var a, b = a.c;
+                                
+                            }
                         }
                     }
                 });
